--- a/SD.AOP.LogSite/Content/css/PlainDetail.css
+++ b/SD.AOP.LogSite/Content/css/PlainDetail.css
@@ -27,9 +27,15 @@
     text-align: left;
     width: 240px;
     border: 1px solid #0094ff;
+    overflow-y: scroll;
 }
 
 .exText {
     width: 100%;
     word-break: break-all;
 }
+
+.datagrid-cell{
+    word-break: break-all;
+    white-space: pre-line;
+ }
