--- a/SD.AOP.LogSite/Views/Shared/_Layout.cshtml
+++ b/SD.AOP.LogSite/Views/Shared/_Layout.cshtml
@@ -4,15 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
-    <link href="~/EasyUI//themes/default/easyui.css" rel="stylesheet" />
-    <link href="~/EasyUI//themes/icon.css" rel="stylesheet" />
+    <link href="~/EasyUI/themes/default/easyui.css" rel="stylesheet" />
+    <link href="~/EasyUI/themes/icon.css" rel="stylesheet" />
     <script type="text/javascript" src="~/Scripts/jquery-1.8.2.min.js"></script>
-    <script type="text/javascript" src="~/EasyUI//jquery.easyui.min.js"></script>
+    <script type="text/javascript" src="~/EasyUI/jquery.easyui.min.js"></script>
     <script type="text/javascript" src="~/EasyUI/jquery.easyui.GlobalParas.js"></script>
-    <script type="text/javascript" src="~/EasyUI//locale/easyui-lang-zh_CN.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.validate.min.js"></script>
-    <script type="text/javascript" src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    <script type="text/javascript" src="~/EasyUI/locale/easyui-lang-zh_CN.js"></script>
     <script type="text/javascript" src="~/Scripts/jquery.messageBox.js"></script>
     <style type="text/css">
         body {
