--- a/SD.AOP.LogSite/Views/ExceptionLog/Detail.cshtml
+++ b/SD.AOP.LogSite/Views/ExceptionLog/Detail.cshtml
@@ -11,7 +11,7 @@
 }
 <div id="dvMsg">
     <div style="width: 100%; height: 100%; float: left; margin: 0;">
-        <div class="easyui-panel" data-options="footer:'#footer'" style="width: 100%; height: 550px; padding: 10px;">
+        <div class="easyui-panel" style="width: 100%; height: 550px; padding: 10px;">
             <table id="tbDetail">
                 <tr>
                     <td class="tdTitle">命名空间：</td>
