1、清理代码； 2、更新nuget包；

--- a/src/SD.AOP.LogViewer/Views/ExceptionLog/Detail.cshtml
+++ b/src/SD.AOP.LogViewer/Views/ExceptionLog/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model SD.AOP.LogViewer.ViewModels.Outputs.ExceptionLogView
+﻿@model SD.AOP.LogViewer.Models.ExceptionLogModel
 
 @{
     ViewBag.Title = "异常日志明细";
