--- a/src/SD.AOP.LogViewer/Views/RunningLog/Detail.cshtml
+++ b/src/SD.AOP.LogViewer/Views/RunningLog/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model SD.AOP.LogViewer.ViewModels.Outputs.RunningLogView
+﻿@model SD.AOP.LogViewer.Models.RunningLogModel
 
 @{
     ViewBag.Title = "程序日志明细";
