--- a/src/SD.AOP.LogViewer/Views/_ViewImports.cshtml
+++ b/src/SD.AOP.LogViewer/Views/_ViewImports.cshtml
@@ -1,2 +1,3 @@
-﻿@using SD.AOP.LogViewer
+﻿@using SD.AOP.LogViewer;
+@using SD.AOP.LogViewer.Models;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
