--- a/src/SD.AOP.LogViewer/Views/RunningLog/Detail.cshtml
+++ b/src/SD.AOP.LogViewer/Views/RunningLog/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model SD.AOP.LogViewer.Models.RunningLogModel
+﻿@model RunningLogModel
 @{
     ViewBag.Title = "程序日志明细";
 }
@@ -7,6 +7,7 @@
     <link type="text/css" href="~/css/Common/Form.css" rel="stylesheet" />
     <link type="text/css" href="~/css/Common/PlainDetail.css" rel="stylesheet" />
 }
+
 <div id="dvMsg">
     <div style="width: 100%; height: 100%; float: left; margin: 0;">
         <div class="easyui-panel" data-options="footer:'#footer'" style="width: 100%; height: 550px; padding: 10px;">
